Bumped Wildfly to 18