@@ -55,7 +55,7 @@
     
     <!-- Wildfly -->
     
-    <wildfly.version>17.0.1.Final</wildfly.version>
+    <wildfly.version>18.0.0.Final</wildfly.version>
     
     <!-- Keycloak -->
     
@@ -69,7 +69,7 @@
     
     <!-- Liquibase -->
     
-    <liquibase.version>3.5.3</liquibase.version>
+    <liquibase.version>3.8.0</liquibase.version>
     
   </properties>
   
@@ -138,13 +138,6 @@
               <goal>process</goal>
             </goals>
             <phase>generate-sources</phase>
-            <configuration>
-                <fork>true</fork>
-                <addCompileSourceRoots>true</addCompileSourceRoots>
-                <compilerArguments>--add-modules=java.se.ee -J--add-modules=java.se.ee</compilerArguments>
-                <processors><processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
-                </processors>
-            </configuration>
           </execution>
         </executions>
         <dependencies>
@@ -152,6 +145,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
             <version>5.4.2.Final</version>
+          </dependency>
+          <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -284,10 +282,16 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
     
     <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
       <scope>provided</scope>
     </dependency>
     
